--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,25 @@
+amqp==2.6.1
+asgiref==3.4.1
+backports.zoneinfo==0.2.1
+billiard==3.6.4.0
+celery==4.4.2
+certifi==2021.10.8
+click==8.0.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+Deprecated==1.2.13
 Django==4.0.1
+kombu==4.6.11
+packaging==21.3
+prompt-toolkit==3.0.27
+pyparsing==3.0.7
+pytz==2021.3
+redis==4.1.3
 sentry-sdk==0.10.2
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.7
+vine==1.3.0
+wcwidth==0.2.5
+wrapt==1.13.3
