--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,34 @@
-amqp==2.6.1
-asgiref==3.4.1
+amqp==5.0.9
+asgiref==3.5.0
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
-celery==4.4.2
+celery==5.2.3
 certifi==2021.10.8
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Deprecated==1.2.13
-Django==4.0.1
-kombu==4.6.11
+Django==3.2.12
+django-celery-beat==2.2.1
+django-celery-results==2.2.0
+django-timezone-field==4.2.3
+flower==1.0.0
+humanize==3.14.0
+kombu==5.2.3
 packaging==21.3
-prompt-toolkit==3.0.27
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
 pyparsing==3.0.7
+python-crontab==2.6.0
+python-dateutil==2.8.2
 pytz==2021.3
 redis==4.1.3
 sentry-sdk==0.10.2
 six==1.16.0
 sqlparse==0.4.2
-urllib3==1.26.7
-vine==1.3.0
+tornado==6.1
+urllib3==1.26.8
+vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.13.3
